using stratify in dataset splitting

--- a/Feed Forward.ipynb
+++ b/Feed Forward.ipynb
@@ -299,8 +299,8 @@
       ],
       "source": [
         "# splitting the dataset\n",
-        "train_dataset_idx, temp_dataset_idx = train_test_split(list(range(len(combined_dataset))), train_size=train_datset_size, random_state=5)\n",
-        "val_dataset_idx, test_dataset_idx = train_test_split(temp_dataset_idx, test_size=0.5, random_state=5)\n",
+        "train_dataset_idx, temp_dataset_idx = train_test_split(list(range(len(combined_dataset))), train_size=train_datset_size, random_state=5, stratify=True)\n",
+        "val_dataset_idx, test_dataset_idx = train_test_split(temp_dataset_idx, test_size=0.5, random_state=5, stratify=True)\n",
         "\n",
         "print(len(train_dataset_idx), len(val_dataset_idx), len(test_dataset_idx))"
       ]
